# FKG-Architecture-for-Dutch-Cadastral-Data

./: .gitignore  .pre-commit-config.yaml  AI-AGENT.md  EXAMPLES.md  MCP-AGENT-ARCHITECTURE.md  README.md  TODO.md  architecture.mermaid  docker-compose.yml  pyproject.toml
client/: Dockerfile  mcp_client.py  orchestrator.py  requirements.txt
dashboard/: index.html
mcp-servers/: Dockerfile.shared
mcp-servers/agent-service/: Dockerfile  example_call.jsonl  server.py
mcp-servers/bag-service/: server.py
mcp-servers/bgt-service/: server.py
mcp-servers/brt-service/: server.py
mcp-servers/cbs-service/: server.py
mcp-servers/kadaster-service/: server.py
mcp-servers/rijkswaterstaat-service/: Dockerfile  server.py
ontology/: geospatial.ttl
scripts/: inspect-mcp.sh
