[project]
name = "ais"
version = "0.1.0"
description = "Dutch Geospatial Data Integration with AI Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker==6.1.3",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "rdflib==7.0.0",
    "urllib3==1.26.15",
    "requests==2.31.0",
    "openai>=1.0.0",
]
