[project]
name = "ais"
version = "0.1.0"
description = "Dutch Geospatial Data Integration with AI Agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docker==6.1.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "rdflib==7.0.0",
    "urllib3==1.26.15",
    "requests==2.31.0",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ty>=0.0.1a7",
    "pyupgrade>=3.21.2",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ais"]

[tool.setuptools]
packages = []
